packages/rocketchat-theme/assets/stylesheets/rtl.less
.rtl {
	direction: rtl;

	// Mix-ins
	.right(@right) {
		right: @right;
		left: auto;
	}

	.left (@left) {
		left: @left;
		right: auto;
	}

	.margin-right(@margin-right) {
		margin-right: @margin-right;
		margin-left: auto;
	}

	.margin-left(@margin-left) {
		margin-left: @margin-left;
		margin-right: auto;
	}

	.padding-right(@padding-right) {
		padding-right: @padding-right;
		padding-left: 0px;
	}

	.padding-left(@padding-left) {
		padding-left: @padding-left;
		padding-right: 0px;
	}

	code {
		unicode-bidi: embed;
		direction: ltr;
	}

	.side-nav {
		.right(0px);
		.header {
			.right(0px);
			.account-box {
				.info {
					padding: 10px 18px 10px 0px;
					.thumb {
						float: right;
					}
					.thumb:after {
						.right(-14px);
					}
					.data {
						float: right;
						padding: 0 10px 0 25px;
						.wrp {
							text-align: right;
						}
					}
				}
				.options {
					.right(0px);
					.status {
						.padding-right(38px);
					}
					span.soon {
						.left(-30px);
					}
					.status:after {
						.right(18px);
					}
				}
				.options._hidden {
					transform: translateX(100%);
				}
			}
		}
		> .arrow {
			.left(8px);
		}
		.arrow {
			transform: rotateY(180deg);
		}
		.flex-nav.animated-hidden {
			transform: translateX(100%);
		}
		.footer {
			.right(0px);
		}
		.rooms-list {
			direction: ltr;
			> .wrapper {
				direction: rtl;
				.padding-right(8px);
				h3.add-room {
					i {
						.left(6px);
					}
				}
				h3 {
					.padding-right(10px);
				}
				ul a {
					padding: 6px 6px 7px 25px;
				}
			}
		}
		.more {
			padding: 4px 10px 4px 0px;
		}
		.empty {
			.padding-right(10px);
		}
		ul .opt {
			.left(0px);
			.padding-left(10px);
		}
		.flex-nav {
			.right(0px);
			> section {
				.right(0px);
			}
			header {
				.right(0px);
				.padding-right(15px);
				> div {
					text-align: right;
				}
			}
			.content {
				> .wrapper {
					direction: rtl;
				}
			}
			.input-submit {
				margin: 35px -4px 0 0px;
			}
			.button:before {
				.right(0px);
			}
			footer {
				.right(0px);
				text-align: right;
				> div {
					text-align: right;
				}
			}
		}
		.search-form {
			.search {
				.padding-right(25px);
			}
			.margin-left(20px);
		}
		h3 {
			.padding-right(10px);
			&.add-room {
				i {
					.left(6px);
				}
			}
		}
		.unread {
			.left(6px);
		}
	}

	.side-nav:before {
		.right(8px);
	}

	.main-content {
		left: 0;
		right: @rooms-box-width;
		.margin-left(40px);
		&.flex-opened {
			left: @flex-tab-width;
			.flex-tab {
				.left(40px);
			}
		}
	}

	.messages-box {
		margin: 60px 0px 0px 20px;
		.new-message {
			.right(50%);
		}
	}

	.container-bars {
		.upload-progress {
			.upload-progress-progress {
				.right(0px);
			}
			.upload-progress-text {
				> a {
					float: left;
				}
			}
		}
		.unread-bar {
			> a {
				float: left;
			}
		}
	}

	.messages-container {
		.right(0);
		.edit-room-title {
			.margin-right(4px);
		}
		.wrapper {
			.right(0);
		}
		.footer {
			.right(0);
		}
		.message-form {
			> div {
				> .file {
					border-right-width: 1px;
					border-radius: 0 5px 5px 0;
					border-left-style: none;
					border-right-style: solid;
				}
			}
			textarea {
				padding-left: 38px;
				padding-right: 8px;
				border-radius: 5px 0 0 5px;
				text-align: right;
			}
			> .users-typing {
				float: right;
			 }
			> .formatting-tips {
				float: left;
				position: relative;
				q {
					padding: 0 3px 0 0;
					border-right: 3px solid;
					border-left: 0px none;
					border-right-color: #CCC;
				}
			}
		}
	}

	.account-box {
		.options {
			direction: ltr;
			> .wrapper {
				direction: rtl;
			}
		}
	}

	.flex-tab-bar {
		.left(0);
		border-right: 1px solid #eaeaea;
		border-left: none;
		z-index: 13;

		.tab-button {
			&.active {
				.margin-right(-1px);
				border-left: 3px solid #ff0000;
				border-right: unset;
			}
		}
	}

	.flex-tab {
		border-left: unset;
		border-right: 1px solid;
		.left(0);
		.transform(translateX(-100%));
		.control {
			text-align: right;
			padding: 12px 30px 12px;
			> a,
			> form {
				float: right;
			}
			.more {
				.right(0);
				.transform(translateX(27px));
			}
			.search-form {
				padding: 0 0 0 4px;
				width: 100%;
				.icon-plus {
					.right(4px);
				}
			}
			.info-tabs {
				text-align: left;
				.left(20px);
			}
		}
	}
	
	.flex-opened {
		.flex-tab {
			.control {
				.more {
					.transform(translateX(0));
				}
			}
		}
	}

	.input-line {
		&.search {
			.octicon {
				.right(10px);
			}
			.icon-spin4 {
				.left(5px);
			}
			.icon-search,
			.icon-right-open-small {
				.right(2px);
			}
			input {
				padding-right: 20px;
				padding-left: 8px;
				text-align: right;
			}
		}
		&.double-col {
			> label {
				float: right;
				.padding-left(20px);
				text-align: left;
				padding: 10px 0 10px 20px;
			}
			> div {
				float: right;
				label {
					.margin-left(4px);
					&:nth-last-child(1) {
						.margin-left(0);
					}
					input {
						.margin-left(4px);
					}
				}
			}
		}
	}

	.user-image {
		.avatar {
			&:after {
				.right(-12px);
			}
		}
	}
	.lines .user-image {
		a {
			> div {
				float: right;
			}
		}
		p {
			float: right;
			.padding-right(10px);
		}
	}

	.user-view {
		.thumb {
			float: right;
		}
		nav {
			.margin-right(-4px);
			.back {
				float: left;
			}
		}
		.info {
			.margin-right(120px);
		}
		.stats {
			li {
				border-right: unset;
				border-left: 2px;
			}
		}
	}
	
	@media all and(max-width: 1100px) {
		#rocket-chat {
			.flex-opened {
				left: 0;
				right: @rooms-box-width;
			}
		}
	}

	@media all and(max-width: 780px) {
		#rocket-chat {
			.main-content {
				right: 0;
			}
			.fixed-title h2 {
				margin-right: 45px;
			}
			&.menu-opened {
				.burger {
					i {
						&:nth-child(1) {
							.transform(translateY(3px) rotate(45deg));
						}
						&:nth-child(3) {
							.transform(translateY(-3px) rotate(-45deg));
						}
					}
				}
				.main-content {
					.transform(translateX(-@rooms-box-width));
				}
			}
		}
	}

	.burger {
		.margin-right(7px);
		.right(0px);
		.unread-burger-alert {
			.left(4px);
		}
	}

	.arrow {
		&:before,
		&:after {
			.calc(right,~"50% - 5px");
		}
		&:before {
			.transform(rotate(135deg) translateX(4px));
		}
		&:after {
			.transform(rotate(-135deg) translateX(4px));
		}
		&.left {
			&:before {
				.transform(rotate(-45deg) translateY(-4px));
			}
			&:after {
				.transform(rotate(45deg) translateY(4px));
			}
		}
		&.top {
			&:before {
				.transform(rotate(45deg) translateX(-2px) translateY(2px));
			}
			&:after {
				.transform(rotate(-45deg) translateX(2px) translateY(2px));
			}
		}
		&.bottom {
			&:before {
				.transform(rotate(-45deg) translateX(-2px) translateY(-2px));
			}
			&:after {
				.transform(rotate(45deg) translateX(2px) translateY(-2px));
			}
		}
		&.close {
			&:before {
				.transform(rotate(-45deg));
			}
			&:after {
				.transform(rotate(45deg));
			}
		}
	}

	.message {
		padding: 18px 70px 4px 20px;
		&.new-day {
			margin-top: 60px;
			&:before {
				.right(0);
				.calc(right,~"50% - 70px");
			}
			&:after {
				.right(0);
				.margin-right(2%);
			}
		}
		.message-dropdown {
			.right(-2px);
			ul {
				li {
					&:first-child {
						padding-right: 6px;
						padding-left: 8px;
						border-left: 1px solid #eee;
						border-right: unset;
					}
					&:last-child {
						padding-left: 13px;
						padding-right: 8px;
					}
				}
			}
		}
		.user {
			margin-left: 5px;
			margin-right: 0;
		}
		.thumb {
			.right(20px);
		}
		.info {
			.edited {
				border-right: 1px dotted #BAB8B8;
				border-left: unset;
				.padding-right(3px);
				.margin-right(3px);
			}
		}
		.private {
			.margin-right(10px); //
		}
		&.sequential {
			padding-top: 4px;
			.info {
				text-align: left;
				.right(5px);
				.edited {
					border-right: 0;
					.margin-right(0);
					.padding-right(0);
				}
				.message-action {
					float: right; //
					.margin-right(1px); //
				}
			}
		}
	}

	blockquote {
		.padding-right(10px);
		&:before {
			.right(0px);
		}
	}

	.first-unread {
		.body {
			&::before {
				right: 20px;
				left: 0px;
			}
			&::after {
				.left(0px);
			}
		}
	}

	.ticks-bar {
		.left(2px);
	}

	.fixed-title {
		padding: 0 20px 0 10px;
		.right(0);
	}

	.list-view {
		> .status {
			.see-all {
				float: left;
			}
		}
		&.uploaded-files-list {
			a {
				direction: ltr;
			}
			i {
				float: right;
				.margin-left(10px);
			}
		}
	}

	.page-list {
		.list {
			a {
				.info {
					ul {
						.margin-right(3px);
					}
				}
			}
			.user-image {
				float: left;
				.margin-right(12px);
			}
			table {
				thead {
					th {
						text-align: right;
					}
				}
			}
		}
	}

	.statistics-table {
		th,
		td {
			text-align: right;
		}
	}

	/* Overridding classes from swipebox.min.css */
	#swipebox-close {
		.left(0);
	}
	@media screen and (min-width:800px) {
		#swipebox-close {
			.left(10px);
		}
	}
	#swipebox-overlay{
		direction: ltr;
	}
}

